SCVParser.py
# Generated from SCV.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SCVParser ( Parser ):

    grammarFileName = "SCV.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "';'", "':='", "'('", "')'", "','", 
                     "'..'", "'()'", "'['", "']'", "'*'", "'/'", "'+'", 
                     "'-'", "'='", "'<'", "'>'", "'<='", "'>='", "'function'", 
                     "'return'", "'if'", "'else'", "'loop'", "'break'", 
                     "'and'", "'or'", "'not'", "'var'", "'int'", "'float'", 
                     "'begin'", "'end'", "'for'", "'while'", "'reverse'", 
                     "'exit'", "'then'", "'is'", "'in'", "'expression'", 
                     "'print'", "'read'", "'sqrt'", "'pow'", "'log'", "'mod'", 
                     "'abs'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "FUNCTION", "RETURN", "IF", "ELSE", "LOOP", "BREAK", 
                      "AND", "OR", "NOT", "VAR", "INT", "FLOAT", "BEGIN", 
                      "END", "FOR", "WHILE", "REVERSE", "EXIT", "THEN", 
                      "IS", "IN", "EXPRESSION", "PRINT", "READ", "SQRT", 
                      "POW", "LOG", "MOD", "ABS", "CTE_INT", "CTE_FLOAT", 
                      "ID", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_vars_decl = 1
    RULE_var_decl = 2
    RULE_value_init = 3
    RULE_funcs_decl = 4
    RULE_func_decl = 5
    RULE_arguments = 6
    RULE_args_list = 7
    RULE_arg_list_continuation = 8
    RULE_arg_list = 9
    RULE_id_list = 10
    RULE_id_list_continuation = 11
    RULE_return_type = 12
    RULE_block = 13
    RULE_stmts = 14
    RULE_stmt = 15
    RULE_assignation = 16
    RULE_if_block = 17
    RULE_alter = 18
    RULE_else_block = 19
    RULE_loop_block = 20
    RULE_while_block = 21
    RULE_for_loop = 22
    RULE_direction = 23
    RULE_built_in_func = 24
    RULE_func_call = 25
    RULE_params = 26
    RULE_params_continuation = 27
    RULE_variable = 28
    RULE_indexation = 29
    RULE_dimensions = 30
    RULE_dimensions_continuation = 31
    RULE_data_type = 32
    RULE_value_literal = 33
    RULE_expression = 34
    RULE_bool_exp = 35
    RULE_next_bool = 36
    RULE_and_exp = 37
    RULE_next_and = 38
    RULE_not_exp = 39
    RULE_bool_term = 40
    RULE_rel_exp = 41
    RULE_num_exp = 42
    RULE_prod_exp = 43
    RULE_prod_div = 44
    RULE_sum_res = 45
    RULE_factor = 46
    RULE_prod_op = 47
    RULE_sum_op = 48
    RULE_rel_operator = 49

    ruleNames =  [ "program", "vars_decl", "var_decl", "value_init", "funcs_decl", 
                   "func_decl", "arguments", "args_list", "arg_list_continuation", 
                   "arg_list", "id_list", "id_list_continuation", "return_type", 
                   "block", "stmts", "stmt", "assignation", "if_block", 
                   "alter", "else_block", "loop_block", "while_block", "for_loop", 
                   "direction", "built_in_func", "func_call", "params", 
                   "params_continuation", "variable", "indexation", "dimensions", 
                   "dimensions_continuation", "data_type", "value_literal", 
                   "expression", "bool_exp", "next_bool", "and_exp", "next_and", 
                   "not_exp", "bool_term", "rel_exp", "num_exp", "prod_exp", 
                   "prod_div", "sum_res", "factor", "prod_op", "sum_op", 
                   "rel_operator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    FUNCTION=20
    RETURN=21
    IF=22
    ELSE=23
    LOOP=24
    BREAK=25
    AND=26
    OR=27
    NOT=28
    VAR=29
    INT=30
    FLOAT=31
    BEGIN=32
    END=33
    FOR=34
    WHILE=35
    REVERSE=36
    EXIT=37
    THEN=38
    IS=39
    IN=40
    EXPRESSION=41
    PRINT=42
    READ=43
    SQRT=44
    POW=45
    LOG=46
    MOD=47
    ABS=48
    CTE_INT=49
    CTE_FLOAT=50
    ID=51
    WS=52
    COMMENT=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vars_decl(self):
            return self.getTypedRuleContext(SCVParser.Vars_declContext,0)


        def funcs_decl(self):
            return self.getTypedRuleContext(SCVParser.Funcs_declContext,0)


        def getRuleIndex(self):
            return SCVParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = SCVParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.vars_decl()
            self.state = 101
            self.funcs_decl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(SCVParser.Var_declContext,0)


        def vars_decl(self):
            return self.getTypedRuleContext(SCVParser.Vars_declContext,0)


        def getRuleIndex(self):
            return SCVParser.RULE_vars_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars_decl" ):
                listener.enterVars_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars_decl" ):
                listener.exitVars_decl(self)




    def vars_decl(self):

        localctx = SCVParser.Vars_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_vars_decl)
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SCVParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.var_decl()
                self.state = 104
                self.vars_decl()
                pass
            elif token in [SCVParser.EOF, SCVParser.FUNCTION, SCVParser.BEGIN]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SCVParser.ID, 0)

        def data_type(self):
            return self.getTypedRuleContext(SCVParser.Data_typeContext,0)


        def value_init(self):
            return self.getTypedRuleContext(SCVParser.Value_initContext,0)


        def getRuleIndex(self):
            return SCVParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)




    def var_decl(self):

        localctx = SCVParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(SCVParser.ID)
            self.state = 110
            self.match(SCVParser.T__0)
            self.state = 111
            self.data_type()
            self.state = 112
            self.value_init()
            self.state = 113
            self.match(SCVParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Value_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value_literal(self):
            return self.getTypedRuleContext(SCVParser.Value_literalContext,0)


        def getRuleIndex(self):
            return SCVParser.RULE_value_init

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue_init" ):
                listener.enterValue_init(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue_init" ):
                listener.exitValue_init(self)




    def value_init(self):

        localctx = SCVParser.Value_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_value_init)
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SCVParser.T__2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(SCVParser.T__2)
                self.state = 116
                self.value_literal()
                pass
            elif token in [SCVParser.T__1]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Funcs_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(SCVParser.Func_declContext,0)


        def funcs_decl(self):
            return self.getTypedRuleContext(SCVParser.Funcs_declContext,0)


        def getRuleIndex(self):
            return SCVParser.RULE_funcs_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs_decl" ):
                listener.enterFuncs_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs_decl" ):
                listener.exitFuncs_decl(self)




    def funcs_decl(self):

        localctx = SCVParser.Funcs_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcs_decl)
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SCVParser.FUNCTION]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.func_decl()
                self.state = 121
                self.funcs_decl()
                pass
            elif token in [SCVParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(SCVParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(SCVParser.ID, 0)

        def arguments(self):
            return self.getTypedRuleContext(SCVParser.ArgumentsContext,0)


        def return_type(self):
            return self.getTypedRuleContext(SCVParser.Return_typeContext,0)


        def IS(self):
            return self.getToken(SCVParser.IS, 0)

        def vars_decl(self):
            return self.getTypedRuleContext(SCVParser.Vars_declContext,0)


        def block(self):
            return self.getTypedRuleContext(SCVParser.BlockContext,0)


        def getRuleIndex(self):
            return SCVParser.RULE_func_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_decl" ):
                listener.enterFunc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_decl" ):
                listener.exitFunc_decl(self)




    def func_decl(self):

        localctx = SCVParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(SCVParser.FUNCTION)
            self.state = 127
            self.match(SCVParser.ID)
            self.state = 128
            self.arguments()
            self.state = 129
            self.return_type()
            self.state = 130
            self.match(SCVParser.IS)
            self.state = 131
            self.vars_decl()
            self.state = 132
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def args_list(self):
            return self.getTypedRuleContext(SCVParser.Args_listContext,0)


        def getRuleIndex(self):
            return SCVParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)




    def arguments(self):

        localctx = SCVParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arguments)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(SCVParser.T__3)
            self.state = 135
            self.args_list()
            self.state = 136
            self.match(SCVParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Args_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg_list(self):
            return self.getTypedRuleContext(SCVParser.Arg_listContext,0)


        def arg_list_continuation(self):
            return self.getTypedRuleContext(SCVParser.Arg_list_continuationContext,0)


        def getRuleIndex(self):
            return SCVParser.RULE_args_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs_list" ):
                listener.enterArgs_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs_list" ):
                listener.exitArgs_list(self)




    def args_list(self):

        localctx = SCVParser.Args_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_args_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.arg_list()
            self.state = 139
            self.arg_list_continuation()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arg_list_continuationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def args_list(self):
            return self.getTypedRuleContext(SCVParser.Args_listContext,0)


        def getRuleIndex(self):
            return SCVParser.RULE_arg_list_continuation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg_list_continuation" ):
                listener.enterArg_list_continuation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg_list_continuation" ):
                listener.exitArg_list_continuation(self)




    def arg_list_continuation(self):

        localctx = SCVParser.Arg_list_continuationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arg_list_continuation)
        try:
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SCVParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.match(SCVParser.T__1)
                self.state = 142
                self.args_list()
                pass
            elif token in [SCVParser.T__4]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arg_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(SCVParser.Id_listContext,0)


        def data_type(self):
            return self.getTypedRuleContext(SCVParser.Data_typeContext,0)


        def getRuleIndex(self):
            return SCVParser.RULE_arg_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg_list" ):
                listener.enterArg_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg_list" ):
                listener.exitArg_list(self)




    def arg_list(self):

        localctx = SCVParser.Arg_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arg_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.id_list()
            self.state = 147
            self.match(SCVParser.T__0)
            self.state = 148
            self.data_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SCVParser.ID, 0)

        def id_list_continuation(self):
            return self.getTypedRuleContext(SCVParser.Id_list_continuationContext,0)


        def getRuleIndex(self):
            return SCVParser.RULE_id_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_list" ):
                listener.enterId_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_list" ):
                listener.exitId_list(self)




    def id_list(self):

        localctx = SCVParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_id_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(SCVParser.ID)
            self.state = 151
            self.id_list_continuation()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_list_continuationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(SCVParser.Id_listContext,0)


        def getRuleIndex(self):
            return SCVParser.RULE_id_list_continuation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_list_continuation" ):
                listener.enterId_list_continuation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_list_continuation" ):
                listener.exitId_list_continuation(self)




    def id_list_continuation(self):

        localctx = SCVParser.Id_list_continuationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_id_list_continuation)
        try:
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SCVParser.T__5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.match(SCVParser.T__5)
                self.state = 154
                self.id_list()
                pass
            elif token in [SCVParser.T__0, SCVParser.T__4]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(SCVParser.RETURN, 0)

        def data_type(self):
            return self.getTypedRuleContext(SCVParser.Data_typeContext,0)


        def getRuleIndex(self):
            return SCVParser.RULE_return_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_type" ):
                listener.enterReturn_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_type" ):
                listener.exitReturn_type(self)




    def return_type(self):

        localctx = SCVParser.Return_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_return_type)
        try:
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SCVParser.RETURN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.match(SCVParser.RETURN)
                self.state = 159
                self.data_type()
                pass
            elif token in [SCVParser.IS]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(SCVParser.BEGIN, 0)

        def stmts(self):
            return self.getTypedRuleContext(SCVParser.StmtsContext,0)


        def END(self):
            return self.getToken(SCVParser.END, 0)

        def ID(self):
            return self.getToken(SCVParser.ID, 0)

        def getRuleIndex(self):
            return SCVParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = SCVParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(SCVParser.BEGIN)
            self.state = 164
            self.stmts()
            self.state = 165
            self.match(SCVParser.END)
            self.state = 166
            self.match(SCVParser.ID)
            self.state = 167
            self.match(SCVParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(SCVParser.StmtContext,0)


        def stmts(self):
            return self.getTypedRuleContext(SCVParser.StmtsContext,0)


        def getRuleIndex(self):
            return SCVParser.RULE_stmts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmts" ):
                listener.enterStmts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmts" ):
                listener.exitStmts(self)




    def stmts(self):

        localctx = SCVParser.StmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_stmts)
        try:
            self.state = 173
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SCVParser.RETURN, SCVParser.IF, SCVParser.FOR, SCVParser.WHILE, SCVParser.EXIT, SCVParser.PRINT, SCVParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.stmt()
                self.state = 170
                self.stmts()
                pass
            elif token in [SCVParser.ELSE, SCVParser.END]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignation(self):
            return self.getTypedRuleContext(SCVParser.AssignationContext,0)


        def if_block(self):
            return self.getTypedRuleContext(SCVParser.If_blockContext,0)


        def loop_block(self):
            return self.getTypedRuleContext(SCVParser.Loop_blockContext,0)


        def EXIT(self):
            return self.getToken(SCVParser.EXIT, 0)

        def RETURN(self):
            return self.getToken(SCVParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(SCVParser.ExpressionContext,0)


        def built_in_func(self):
            return self.getTypedRuleContext(SCVParser.Built_in_funcContext,0)


        def func_call(self):
            return self.getTypedRuleContext(SCVParser.Func_callContext,0)


        def getRuleIndex(self):
            return SCVParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = SCVParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_stmt)
        try:
            self.state = 186
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.assignation()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.if_block()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 177
                self.loop_block()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 178
                self.match(SCVParser.EXIT)
                self.state = 179
                self.match(SCVParser.T__1)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 180
                self.match(SCVParser.RETURN)
                self.state = 181
                self.expression()
                self.state = 182
                self.match(SCVParser.T__1)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 184
                self.built_in_func()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 185
                self.func_call()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(SCVParser.VariableContext,0)


        def expression(self):
            return self.getTypedRuleContext(SCVParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SCVParser.RULE_assignation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignation" ):
                listener.enterAssignation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignation" ):
                listener.exitAssignation(self)




    def assignation(self):
